// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GaugeChart /> render when data passed in renders the correct amount of bars 1`] = `
.c0 {
  color: #2C2C2C;
}

.c1 {
  -webkit-transform: translate(114px,100px);
  -ms-transform: translate(114px,100px);
  transform: translate(114px,100px);
}

.c2 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-transform: translate(0,-25px);
  -ms-transform: translate(0,-25px);
  transform: translate(0,-25px);
  font-size: 40px;
  font-weight: 300;
  text-anchor: middle;
  fill: #2C2C2C;
}

<svg
  className="c0"
  viewBox="0 0 228 100"
>
  <g
    className="c1"
  >
    <text
      className="c2"
    >
      12
    </text>
    
  </g>
</svg>
`;

exports[`<GaugeChart /> render when data passed in renders with a label 1`] = `
.c0 {
  color: #2C2C2C;
}

.c1 {
  -webkit-transform: translate(114px,100px);
  -ms-transform: translate(114px,100px);
  transform: translate(114px,100px);
}

.c3 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-transform: translate(0,-5px);
  -ms-transform: translate(0,-5px);
  transform: translate(0,-5px);
  font-size: 12px;
  font-weight: 300;
  text-anchor: middle;
  fill: #2C2C2C;
}

.c2 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-transform: translate(0,-25px);
  -ms-transform: translate(0,-25px);
  transform: translate(0,-25px);
  font-size: 40px;
  font-weight: 300;
  text-anchor: middle;
  fill: #2C2C2C;
}

<svg
  className="c0"
  viewBox="0 0 228 100"
>
  <g
    className="c1"
  >
    <text
      className="c2"
    >
      12
    </text>
    <text
      className="c3"
    >
      Parsecs
    </text>
  </g>
</svg>
`;

exports[`<GaugeChart /> render when data passed in renders with max and min values 1`] = `
.c0 {
  color: #2C2C2C;
}

.c1 {
  -webkit-transform: translate(114px,100px);
  -ms-transform: translate(114px,100px);
  transform: translate(114px,100px);
}

.c3 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-transform: translate(0,-5px);
  -ms-transform: translate(0,-5px);
  transform: translate(0,-5px);
  font-size: 12px;
  font-weight: 300;
  text-anchor: middle;
  fill: #2C2C2C;
}

.c2 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-transform: translate(0,-25px);
  -ms-transform: translate(0,-25px);
  transform: translate(0,-25px);
  font-size: 40px;
  font-weight: 300;
  text-anchor: middle;
  fill: #2C2C2C;
}

<svg
  className="c0"
  viewBox="0 0 228 100"
>
  <g
    className="c1"
  >
    <text
      className="c2"
    >
      1337
    </text>
    <text
      className="c3"
    >
      Leet
    </text>
  </g>
</svg>
`;

exports[`<GaugeChart /> update when data changes should call the update method or the chart 1`] = `
.c0 {
  color: #2C2C2C;
}

.c1 {
  -webkit-transform: translate(114px,100px);
  -ms-transform: translate(114px,100px);
  transform: translate(114px,100px);
}

.c2 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-transform: translate(0,-25px);
  -ms-transform: translate(0,-25px);
  transform: translate(0,-25px);
  font-size: 40px;
  font-weight: 300;
  text-anchor: middle;
  fill: #2C2C2C;
}

<svg
  className="c0"
  viewBox="0 0 228 100"
>
  <g
    className="c1"
  >
    <text
      className="c2"
    >
      12
    </text>
    
  </g>
</svg>
`;

exports[`<GaugeChart /> update when data changes should call the update method or the chart 2`] = `
.c0 {
  color: #2C2C2C;
}

.c1 {
  -webkit-transform: translate(114px,100px);
  -ms-transform: translate(114px,100px);
  transform: translate(114px,100px);
}

.c2 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-transform: translate(0,-25px);
  -ms-transform: translate(0,-25px);
  transform: translate(0,-25px);
  font-size: 40px;
  font-weight: 300;
  text-anchor: middle;
  fill: #2C2C2C;
}

<svg
  className="c0"
  viewBox="0 0 228 100"
>
  <g
    className="c1"
  >
    <text
      className="c2"
    >
      70
    </text>
    
  </g>
</svg>
`;
